; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_XToBuf.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_XToBuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @XToBuf(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %26

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* %5, align 4
  %14 = call i32* @XToBio(i32* %12, i32 %13)
  store i32* %14, i32** %6, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %11
  store i32* null, i32** %3, align 8
  br label %26

18:                                               ; preds = %11
  %19 = load i32*, i32** %6, align 8
  %20 = call i32* @BioToBuf(i32* %19)
  store i32* %20, i32** %7, align 8
  %21 = load i32*, i32** %6, align 8
  %22 = call i32 @FreeBio(i32* %21)
  %23 = load i32*, i32** %7, align 8
  %24 = call i32 @SeekBuf(i32* %23, i32 0, i32 0)
  %25 = load i32*, i32** %7, align 8
  store i32* %25, i32** %3, align 8
  br label %26

26:                                               ; preds = %18, %17, %10
  %27 = load i32*, i32** %3, align 8
  ret i32* %27
}

declare dso_local i32* @XToBio(i32*, i32) #1

declare dso_local i32* @BioToBuf(i32*) #1

declare dso_local i32 @FreeBio(i32*) #1

declare dso_local i32 @SeekBuf(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
